feat: Add names to Transaction Controller endpoints
This causes proper client methods to be generated
